shift app from t2.medium to t2.large

--- a/data_science/research/devise/notebooks/09 - devise against custom sentence embedding.ipynb
+++ b/data_science/research/devise/notebooks/09 - devise against custom sentence embedding.ipynb
@@ -487,11 +487,10 @@
     "        super(DeViSE, self).__init__()\n",
     "        self.backbone = backbone\n",
     "        self.head = nn.Sequential(\n",
-    "            nn.Dropout(0.2),\n",
-    "            nn.Linear(in_features=512*7*7, out_features=target_size*2),\n",
+    "            nn.Linear(in_features=512*7*7, out_features=target_size),\n",
     "            nn.ReLU(inplace=True),\n",
-    "            nn.Dropout(0.2),\n",
-    "            nn.Linear(in_features=target_size*2, out_features=target_size),\n",
+    "            nn.Dropout(),\n",
+    "            nn.Linear(in_features=target_size, out_features=target_size),\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
